--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "ponder dev",
-    "start": "ponder start",
+    "start": "ponder start --schema public",
     "db": "ponder db",
     "codegen": "ponder codegen",
     "serve": "ponder serve",
